# Bindstone

./: .gitignore  AGENTS.md  BOOST_MIGRATION_README.md  Bindstone.sln  Bindstone.sln.boost_backup  BindstoneGameServer.sln  BindstoneGameServer.vcxproj  BindstoneGameServer.vcxproj.filters  BindstoneLobby.sln  BindstoneLobby.vcxproj  BindstoneLobby.vcxproj.filters  BuildBindstoneWindowsClient.bat  BuildBindstoneWindowsClient.cmd  BuildBindstoneWindowsClient.ps1  CMakeLists.txt  LocalSaveString.txt  M2tMLibrary.aps  M2tMLibrary.exe - Release.lnk  M2tMLibrary.exe - Shortcut.lnk  M2tMLibrary.sln  M2tMLibrary.vcxproj  M2tMLibrary.vcxproj.filters  M2tMLibrary140807.vsps.REMOVED.git-id  PassResult.txt  SDLMain.h  SDLMain.m  ServerPlayer.txt  ServerSaveString.txt  bindstone_vs_properties.props  build_windows.ps1  buildings.json  cascade_msbuild.bat  cerealtest.h  clicker.scene  conanfile.txt  creatures.json  digger.scene  digger.scene.REMOVED.git-id  donuty.cpp  editor.cpp  (+14 more)
Source/: AGENTS.md  CMakeLists.txt  StdAfx.h  bindstoneGameServerMain.cpp  bindstoneLobbyMain.cpp  chat_message.hpp  exampleCode.cpp  exampleCode.h  game.cpp  game.h  main.cpp
Source/Animation/: actionSequence.cpp  actionSequence.h  frameSwapper.cpp  frameSwapper.h  package.h  task.hpp
Source/ArtificialIntelligence/: CMakeLists.txt  pathfinding.cpp  pathfinding.h
Source/Audio/: CMakeLists.txt  package.h  sound.cpp  sound.h
Source/ClickerGame/: CMakeLists.txt  clickerGame.cpp  clickerGame.h
Source/DiggerGame/: CMakeLists.txt  diggerGame.cpp  diggerGame.h
Source/Editor/: AGENTS.md  CMakeLists.txt  anchorEditor.h  componentPanels.cpp  componentPanels.h  editComponents.cpp  editComponents.h  editor.cpp  editor.h  editorControls.cpp  editorControls.h  editorDefines.h  editorFactories.cpp  editorFactories.h  editorPanels.cpp  editorPanels.h  editorSceneGraphPanel.cpp  editorSceneGraphPanel.h  editorSelection.cpp  editorSelection.h  lightEditorFactories.cpp  lightEditorFactories.h  texturePicker.h
Source/Examples/: exampleCode.cpp  exampleCode.h  main.cpp
Source/Game/: AGENTS.md  CMakeLists.txt  battleEffect.cpp  battleEffect.h  building.cpp  building.h  creature.cpp  creature.h  editor.cpp  editor.h  game.cpp  game.h  gameEditor.cpp  gameEditor.h  gameHooks.cxx  managers.cpp  managers.h  pathGrid.h  player.cpp  player.h  server.cpp  server.h  standardHooks.cxx  standardScriptMethods.h  state.cpp  state.h  wallet.cpp  wallet.h
Source/Game/Instance/: AGENTS.md  gameInstance.cpp  gameInstance.h  team.cpp  team.h
Source/Game/Interface/: AGENTS.md  guiFactories.cpp  guiFactories.h  interfaceHooks.cxx  interfaceManager.cpp  interfaceManager.h
Source/Game/NetworkLayer/: AGENTS.md  accountActions.cpp  accountActions.h  clientActions.cpp  clientActions.h  gameNetworkHooks.cxx  gameServer.cpp  gameServer.h  gameServerActions.cpp  gameServerActions.h  lobbyServer.cpp  lobbyServer.h  networkAction.h  networkObject.h  package.h  serverActions.h  synchronizeAction.cpp  synchronizeAction.h
Source/Game/Script/: script.cpp
Source/Game/Server/: accountActions.cpp  accountActions.h  clientActions.h  lobbyServer.cpp  lobbyServer.h  package.h  serverActions.h  uiManager.h
Source/Interface/: CMakeLists.txt  mouse.cpp  mouse.h  package.h
Source/MV/: AGENTS.md  precompiled.h
Source/MV/Animation/: CMakeLists.txt
Source/MV/ArtificialIntelligence/: artificialIntelligenceHooks.cxx  pathfinding.cpp  pathfinding.h
Source/MV/Audio/: CMakeLists.txt  package.h  sound.cpp  sound.h
Source/MV/Interface/: mouse.cpp  mouse.h  package.h  tapDevice.cpp  tapDevice.h
Source/MV/Network/: AGENTS.md  download.cpp  download.h  dynamicVariable.cpp  dynamicVariable.h  email.h  network.cpp  network.h  networkHooks.cxx  networkObject.h  package.h  url.cpp  url.h  webServer.cpp  webServer.h
Source/MV/Physics/: collider.cpp  collider.h  package.h
Source/MV/Render/: CMakeLists.txt  boxaabb.cpp  boxaabb.h  formattedText.cpp  formattedText.h  glext.h  matrix.hpp  package.h  points.cpp  points.h  render.cpp  render.h  renderHooks.cpp  renderHooks.cxx  sharedTextures.cpp  sharedTextures.h  texturePacker.cpp  texturePacker.h  textures.cpp  textures.h
Source/MV/Script/: chaiscriptHooks.ixx  engineHooks.cxx  script.cpp  script.cxx  script.h
Source/MV/Serialization/: makeNvp.h  serialize.h
Source/MV/Utility/: AGENTS.md  CMakeLists.txt  asioThreadPool.cpp  asioThreadPool.h  cerealUtility.h  chaiscriptStdLib.cpp  chaiscriptStdLib.h  chaiscriptUtility.h  exactType.hpp  generalUtility.cpp  generalUtility.h  localization.hpp  log.cpp  log.h  messenger.hpp  package.h  properties.h  properties.hpp  require.hpp  scopeGuard.hpp  services.h  services.hpp  sha512.cpp  sha512.h  signal.hpp  stopwatch.cpp  stopwatch.h  stringUtility.cpp  task.cpp  (+9 more)
Source/Network/: CMakeLists.txt  download.cpp  download.h  email.h  network.cpp  network.h  networkObject.h  package.h  url.cpp  url.h
Source/Physics/: CMakeLists.txt  collider.cpp  collider.h  collisionObjects.cpp  collisionObjects.h  package.h
Source/Render/: CMakeLists.txt  boxaabb.cpp  boxaabb.h  compositeScene.cpp  compositeScene.h  drawShapes.cpp  drawShapes.h  formattedText.cpp  formattedText.h  glext.h  matrix.cpp  matrix.h  matrix.hpp  package.h  points.cpp  points.h  render.cpp  render.h  scene.cpp  scene.h  sceneMessages.h  sceneMessages.hpp  sharedTextures.cpp  sharedTextures.h  text.cpp  text.h  texturePacker.cpp  texturePacker.h  textures.cpp  textures.h  tiles.h
Source/SharedCore/: CMakeLists.txt
Source/SolutionSpecific/: AGENTS.md
Source/Utility/: CMakeLists.txt  asioThreadPool.cpp  asioThreadPool.h  cerealUtility.h  chaiscriptStdLib.cpp  chaiscriptStdLib.h  chaiscriptUtility.h  exactType.hpp  expression.cpp  expression.h  generalUtility.cpp  generalUtility.h  log.h  log.hpp  messageHandler.hpp  miscfunc.h  notification.h  optionalCalls.hpp  package.h  require.hpp  scopeGuard.hpp  services.h  sha512.cpp  signal.h  signal.hpp  stopwatch.cpp  stopwatch.h  task.hpp  taskActions.hpp  threadPool.cpp  threadPool.h  threadPool.hpp  tinyutf8.cpp  tinyutf8.h  tupleHelpers.hpp  visitor.hpp
(+410 files in other folders)
